change in header and main

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <nav>
             <a href="./WebStudio">WebStudio</a>
             <ul>
-                <li><a href="#Студія">Студія</a></li>
-                <li><a href="#Портфоліо">Портфоліо</a></li>
-                <li><a href="#Портфоліо">Контакти</a></li>
+                <li><a href="#">Студія</a></li>
+                <li><a href="#">Портфоліо</a></li>
+                <li><a href="#">Контакти</a></li>
             </ul>
         </nav>
         <ul>
@@ -24,7 +24,6 @@
         </ul>
     </header>
     <main>
-        <div>
             <section>
                 <h1>Ефективні рішення для <br /> вашого бізнесу</h1>
                 <button type="button">Замовити послугу</button>
@@ -88,7 +87,6 @@
                     </li>
                 </ul>
             </section>
-        </div>
     </main>
     <footer>
         <a href="./WebStudio">WebStudio</a>
