--- a/index.html
+++ b/index.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
 <html lang="uk">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Studio</title>
 </head>
-
 <body>
     <header>
         <nav>
-            <a href="./WebStudio">WebStudio</a>
+            <a href="./index.html">WebStudio</a>
             <ul>
-                <li><a href="#">Студія</a></li>
+                <li><a href="./index.html">Студія</a></li>
                 <li><a href="#">Портфоліо</a></li>
                 <li><a href="#">Контакти</a></li>
             </ul>
@@ -24,82 +22,81 @@
         </ul>
     </header>
     <main>
-            <section>
-                <h1>Ефективні рішення для <br /> вашого бізнесу</h1>
-                <button type="button">Замовити послугу</button>
-            </section>
-            <section>
-                <ul>
-                    <li>
-                        <h2>УВАГА ДО ДЕТАЛЕЙ</h2>
-                        <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
-                    </li>
-                    <li>
-                        <h2>ПУНКТУАЛЬНІСТЬ</h2>
-                        <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
-                    </li>
-                    <li>
-                        <h2>ПЛАНУВАННЯ</h2>
-                        <p>Так само консультація з широким активом значною мірою зумовлює.</p>
-                    </li>
-                    <li>
-                        <h2>СУЧАСНІ ТЕХНОЛОГІЇ</h2>
-                        <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
-                    </li>
-                </ul>
-            </section>
-            <section>
-                <h2>Чим ми займаємося</h2>
-                <ul>
-                    <li>
-                        <img src="./images/img.jpg" alt="Робота на клавіатурі" width="370" height="295">
-                    </li>
-                    <li>
-                        <img src="./images/img1.jpg" alt="Робота з Телефоном та тачпадом" width="370" height="295">
-                    </li>
-                    <li>
-                        <img src="./images/img2.jpg" alt="Працює з планшетом" width="370" height="295">
-                    </li>
-                </ul>
-            </section>
-            <section>
-                <h2>Наша команда</h2>
-                <ul>
-                    <li>
-                        <img src="./images/img4.jpg" alt="Співробітник" width="270" height="260">
-                        <h3>Ігор Дем'яненко</h3>
-                        <p>Product Designer</p>
-                    </li>
-                    <li>
-                        <img src="./images/img5.jpg" alt="Співробітник" width="270" height="260">
-                        <h3>Ольга Рєпіна</h3>
-                        <p>Frontend Developer</p>
-                    </li>
-                    <li>
-                        <img src="./images/img6.jpg" alt="Співробітник" width="270" height="260">
-                        <h3>Микола Тарасов</h3>
-                        <p>Marketing</p>
-                    </li>
-                    <li>
-                        <img src="./images/img7.jpg" alt="Співробітник" width="270" height="260">
-                        <h3>Михайло Єрмаков</h3>
-                        <p>UI Designer</p>
-                    </li>
-                </ul>
-            </section>
+        <section>
+            <h1>Ефективні рішення для вашого бізнесу</h1>
+            <button type="button">Замовити послугу</button>
+        </section>
+        <section>
+            <h2>Особливості</h2>
+            <ul>
+                <li>
+                    <h3>Увага до деталей</h3>
+                    <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+                </li>
+                <li>
+                    <h3>Пунктуальність</h3>
+                    <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+                </li>
+                <li>
+                    <h3>Планування</h3>
+                    <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+                </li>
+                <li>
+                    <h3>Сучасні технології</h3>
+                    <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h2>Чим ми займаємося</h2>
+            <ul>
+                <li>
+                    <img src="./images/img.jpg" alt="Робота на клавіатурі" width="370" height="295">
+                </li>
+                <li>
+                    <img src="./images/img1.jpg" alt="Робота з Телефоном та тачпадом" width="370" height="295">
+                </li>
+                <li>
+                    <img src="./images/img2.jpg" alt="Працює з планшетом" width="370" height="295">
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h2>Наша команда</h2>
+            <ul>
+                <li>
+                    <img src="./images/img4.jpg" alt="Співробітник" width="270" height="260">
+                    <h3>Ігор Дем'яненко</h3>
+                    <p>Product Designer</p>
+                </li>
+                <li>
+                    <img src="./images/img5.jpg" alt="Співробітник" width="270" height="260">
+                    <h3>Ольга Рєпіна</h3>
+                    <p>Frontend Developer</p>
+                </li>
+                <li>
+                    <img src="./images/img6.jpg" alt="Співробітник" width="270" height="260">
+                    <h3>Микола Тарасов</h3>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/img7.jpg" alt="Співробітник" width="270" height="260">
+                    <h3>Михайло Єрмаков</h3>
+                    <p>UI Designer</p>
+                </li>
+            </ul>
+        </section>
     </main>
     <footer>
-        <a href="./WebStudio">WebStudio</a>
+        <a href="./index.html">WebStudio</a>
         <address>
-            <a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer nofollow">м. Київ,
-                пр-т Лесі
-                Українки, 26</a>
             <ul>
+                <li><a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі
+                Українки, 26</a></li>
                 <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
         </address>
     </footer>
 </body>
-
 </html>
